[package]
name = "graphman"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
diesel = { workspace = true }
graph = { workspace = true }
graph-store-postgres = { workspace = true }
graphman-primitives = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
