[package]
name = "graphman-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
constant_time_eq = { workspace = true }
graph = { workspace = true }
graph-store-postgres = { workspace = true }
graphman = { workspace = true }
graphman-extensions = { workspace = true }
graphman-primitives = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
